# FMEA-MSR-EventSystem

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  class_diagram.plantuml  client_cert.pem  client_key.der  client_key.pem  sequenz.plantuml  stateMachine.plantuml
TestProjektTwinCATEvents/: TestProjektTwinCATEvents.sln  TestProjektTwinCATEvents_functionblocks.json  TestProjektTwinCATEvents_objects.json  TestProjektTwinCATEvents_pous.json  TestProjektTwinCATEvents_pous_st.json  export.xml
TestProjektTwinCATEvents/Empty TwinCAT Connectivity Project/: Empty TwinCAT Connectivity Project.tcconnproj  TwinCAT OPC UA Server Project1.tcopcuasrv
TestProjektTwinCATEvents/Empty TwinCAT Connectivity Project/TwinCAT OPC UA Server Project1/Alarms and Conditions/: Alarms and Conditions.ac
TestProjektTwinCATEvents/Empty TwinCAT Connectivity Project/TwinCAT OPC UA Server Project1/Data Access/: Data Access.opcuada
TestProjektTwinCATEvents/Empty TwinCAT Connectivity Project/TwinCAT OPC UA Server Project1/Event Logger/: Event Logger.opcuael
TestProjektTwinCATEvents/Empty TwinCAT Connectivity Project/TwinCAT OPC UA Server Project1/Historical Access/: Historical Access.opcuaha
TestProjektTwinCATEvents/Empty TwinCAT Connectivity Project/TwinCAT OPC UA Server Project1/Security Access/: Security Access.sec
TestProjektTwinCATEvents/Empty TwinCAT Connectivity Project1/: Empty TwinCAT Connectivity Project1.tcconnproj
TestProjektTwinCATEvents/Empty TwinCAT Connectivity Project1/TwinCAT OPC UA Server Project1/Data Access/: PLC1.uadevtype  PLC2.uadevtype
TestProjektTwinCATEvents/Empty TwinCAT Connectivity Project1/TwinCAT OPC UA Server Project1/Resources/: Resources.res
TestProjektTwinCATEvents/Empty TwinCAT Connectivity Project1/TwinCAT OPC UA Server Project1/Security Access/: Security Access.sec
TestProjektTwinCATEvents/TestProjektTwinCATEvents/: TestProjektTwinCATEvents.tsproj  TrialLicense.tclrs
TestProjektTwinCATEvents/TestProjektTwinCATEvents/Proj1/: PlcTask.TcTTO  Proj1.plcproj
TestProjektTwinCATEvents/TestProjektTwinCATEvents/Proj1/GVLs/: GVL.TcGVL  OPCUA.TcGVL
TestProjektTwinCATEvents/TestProjektTwinCATEvents/Proj1/POUs/: FB_Automatikbetrieb_F1.TcPOU  FB_Betriebsarten.TcPOU  FB_Diagnose_D2.TcPOU  FB_InitFahrt_A6_A2.TcPOU  FB_Methode1Job.TcPOU  FB_Notaus_D1.TcPOU  FB_ProduktionMitStoerung_D3.TcPOU  MAIN.TcPOU
TestProjektTwinCATEvents/TestProjektTwinCATEvents/Proj1/_CompileInfo/: 89824BA6-9465-CC36-5443-1D4299BAF868.compileinfo
TestProjektTwinCATEvents/TestProjektTwinCATEvents/Proj1/_CompileInfo_Upload/: DC3F56A7-876B-7FA5-9154-23BE9C3BBF15.compileinfo
TestProjektTwinCATEvents/TestProjektTwinCATEvents/_Boot/: TargetDescription.xml
TestProjektTwinCATEvents/TestProjektTwinCATEvents/_Boot/CurrentConfig/: Proj1.tpzip  Untitled1.tpzip
TestProjektTwinCATEvents/TestProjektTwinCATEvents/_Boot/TwinCAT RT (x64)/: CurrentConfig.tszip  CurrentConfig.xml
TestProjektTwinCATEvents/TestProjektTwinCATEvents/_Boot/TwinCAT RT (x64)/CurrentConfig/: Proj1.tpzip  Untitled1.tpzip
TestProjektTwinCATEvents/TestProjektTwinCATEvents/_Boot/TwinCAT RT (x64)/Plc/: Port_851.app  Port_851.cid  Port_851.crc  Port_851.json  Port_851.tmc  Port_851_boot.tizip
TwinCAT/: README.md  ReadME.md  v1.0_Tisch01_Beckhoff_I4.0.sln  v1.0_Tisch01_Beckhoff_I4.0.sln.json
TwinCAT/Test1/: Beckhoff_I4.0-Demonstrator.tsproj
TwinCAT/Test1/SPS_Demonstrator/: PlcTask.TcTTO  SPS_Demonstrator.plcproj  SPS_Demonstrator.tmc  SPS_Demonstrator.tmcRefac
TwinCAT/Test1/SPS_Demonstrator/GVLs/: GVL.TcGVL  GVL_HRL.TcGVL  GVL_MBS.TcGVL  GVL_SST.TcGVL  GVL_VSG.TcGVL
TwinCAT/Test1/SPS_Demonstrator/POUs/: HRL_SkillSet.TcPOU
TwinCAT/Test1/SPS_Demonstrator/_CompileInfo/: 2CA1FF1C-598F-67EC-7F83-0CCC1F371559.compileinfo  958D3885-C9A5-CC35-0636-08EA611E29ED.compileinfo
TwinCAT/Test1/_Boot/: TargetDescription.xml
TwinCAT/Test1/_Boot/CurrentConfig/: SPS_Demonstrator.tpzip
TwinCAT/Test1/_Boot/TwinCAT RT (x64)/: CurrentConfig.tszip  CurrentConfig.xml
TwinCAT/Test1/_Boot/TwinCAT RT (x64)/Plc/: Port_851.app  (+3 more)
UML Diagrams/: D1_React.plantuml  D2_React.plantuml  D2_React1.plantuml  D2_React2.plantuml  Detailed_structure.plantuml  FactoryPatter.plantuml  HighLevel_structure.plantuml  State.plantuml  sequence_High_Level_System.plantuml  sequenz.plantuml
UML Diagrams/Classes/: class_AckLogger.plantuml  class_CommandForceFacory1.plantuml  class_CommandForceFactory2.plantuml  class_EventBus.plantuml  class_FailureRecorder.plantuml  class_PLCMonitor.plantuml  class_ReactionManager1.plantuml  class_ReactionManager2.plantuml  class_TimeBlogger.plantuml
UML Diagrams/Patterns/: Command.plantuml  Factory.plantuml  Observer.plantuml  Specification.plantuml  Strategy.plantuml
certificates/: README.md  client_cert.der
include/: AckLogger.h  Acks.h  CommandForce.h  CommandForceFactory.h  Correlation.h  Event.h  EventBus.h  FailureRecorder.h  ICommandForce.h  IOrderQueue.h  IWinnerFilter.h  InventorySnapshot.h  InventorySnapshotUtils.h  KGIngestionForce.h  KGIngestionParams.h  MonActionForce.h  NodeIdUtils.h  PLCCommandForce.h  PLCMonitor.h  Plan.h  PlanJsonUtils.h  PythonRuntime.h  PythonWorker.h  ReactionManager.h  ReactiveObserver.h  SystemReactionForce.h  TaskForce.h  TaskManager.h  TimeBlogger.h  WriteCsvForce.h  WriteCsvParams.h  common_types.h
open62541/examples/pubsub/: README_pubsub_tpm2_pkcs11.txt
src/: CommandForce.cpp  CommandForceFactory.cpp  EventBus.cpp  FMEA_KG.ttl  FMEA_KG_augmented_100_trip.ttl  FMEA_KG_augmented_500_trip.ttl  FMEA_KG_bak.ttl  FailureRecorder.cpp  InventorySnapShotUtils.cpp  KGIngestionForce.cpp  KG_Interface.py  MonActionForce.cpp  PLCCommandForce.cpp  PLCMonitor.cpp  PlanJsonUtils.cpp  PythonRuntime.cpp  README.md  ReactionManager.cpp  SystemReactionForce.cpp  TaskForce.cpp  TaskManager.cpp  TimeBlogger.cpp  WriteCsvForce.cpp  main.cpp  main_alt.cpp
tools/: README.md
tools/ua_test_server/: CMakeLists.txt  CMakePresets.json  README.md  ua_test_server_secure.cpp
tools/ua_test_server/certs/: server_cert.der  server_cert.pem  server_key.der  server_key.pem
(+42 files in other folders)
